--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
       <version>4.11</version>
     </dependency>
   </dependencies>
+  <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Internal Releases</name>
+            <url>http://localhost:8081/repository/Jenkins_full-rel/</url>
+		</repository>
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Internal Snapshot Releases</name>
+            <url>http://localhost:8081/repository/Jenkins_full-snap/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
  <build>
   <plugins>
