--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,22 @@
     <maven.compiler.source>7</maven.compiler.source>
     <maven.compiler.target>7</maven.compiler.target>
   </properties>
-
 <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-    </dependency>
-	<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
- <dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+<dependency>
     <groupId>org.sonarsource.scanner.maven</groupId>
     <artifactId>sonar-maven-plugin</artifactId>
     <version>3.7.0.1746</version>
- </dependency>
+</dependency>
 </dependencies>
-  <distributionManagement>
+<distributionManagement>
         <repository>
             <id>deployment</id>
             <name>Internal Releases</name>
@@ -34,7 +35,7 @@
             <name>Internal Snapshot Releases</name>
             <url>http://localhost:8081/repository/Jenkins_full-snap/</url>
         </snapshotRepository>
-    </distributionManagement>
+ </distributionManagement>
 <build>
         <plugins>
             <plugin>
